[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/small_button.tres" type="Theme" id=3]
[ext_resource path="res://src/screens/settings_page/add_location/location.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -227.5
margin_top = 17.6389
margin_right = 227.5
margin_bottom = 83.6389
custom_fonts/font = SubResource( 1 )
text = "Selecting Location"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="country_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.349
margin_top = -159.611
margin_right = -117.349
margin_bottom = -122.611
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Country"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="country" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.6785
margin_top = -158.351
margin_right = 31.3215
margin_bottom = -121.351
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_country" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -103.758
margin_right = 90.0
margin_bottom = -36.7579
theme = ExtResource( 3 )
text = "Select Country"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="city_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -9.75793
margin_right = -164.0
margin_bottom = 27.2421
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "City"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="city" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.6785
margin_top = -8.42075
margin_right = 31.3215
margin_bottom = 28.5793
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_city" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 46.2421
margin_right = 90.0
margin_bottom = 113.242
theme = ExtResource( 3 )
text = "Select City"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = 192.345
margin_right = 92.5
margin_bottom = 276.345
theme = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="pause_overlay" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.5
margin_top = -127.5
margin_right = 194.5
margin_bottom = 127.5
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pause_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -22.0
margin_right = 103.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Loading......."
[connection signal="pressed" from="select_country" to="." method="_on_select_country_pressed"]
[connection signal="pressed" from="select_city" to="." method="_on_select_city_pressed"]
[connection signal="button_up" from="continue" to="." method="_on_continue_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
