[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/small_button.tres" type="Theme" id=3]
[ext_resource path="res://src/screens/settings_page/add_location/location.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/back_button.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/red_cancel.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -227.5
margin_top = 17.6389
margin_right = 227.5
margin_bottom = 83.6389
custom_fonts/font = SubResource( 1 )
text = "Selecting Location"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -391.0
margin_top = -113.5
margin_right = 391.0
margin_bottom = 113.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 782.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="country_label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 11.0
margin_right = 195.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Country"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_country" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 386.0
margin_bottom = 67.0
theme = ExtResource( 3 )
text = "Select Country"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="country" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_top = 11.0
margin_right = 782.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 782.0
margin_bottom = 184.0

[node name="city_label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 11.0
margin_right = 208.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "City"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_city" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 212.0
margin_right = 361.0
margin_bottom = 67.0
theme = ExtResource( 3 )
text = "Select City"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="city" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 365.0
margin_top = 11.0
margin_right = 782.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = 141.948
margin_right = 92.5
margin_bottom = 225.948
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="get_new_timings" type="HTTPRequest" parent="."]

[node name="loading_overlay" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.5
margin_top = -127.5
margin_right = 194.5
margin_bottom = 127.5
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="loading_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -22.0
margin_right = 103.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Loading......."

[node name="success_overlay" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.5
margin_top = -127.5
margin_right = 194.5
margin_bottom = 127.5
color = Color( 0.211765, 0.819608, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="success_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -22.0
margin_right = 145.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Location Updated"

[node name="close_button" type="TouchScreenButton" parent="success_overlay"]
position = Vector2( 330.099, -23.9385 )
scale = Vector2( 0.175638, 0.175638 )
normal = ExtResource( 6 )

[node name="back_button" type="TouchScreenButton" parent="."]
scale = Vector2( 0.244, 0.244 )
normal = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/select_country" to="." method="_on_select_country_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/select_city" to="." method="_on_select_city_pressed"]
[connection signal="button_up" from="continue" to="." method="_on_continue_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="get_new_timings" to="." method="_on_get_new_timings_request_completed"]
[connection signal="pressed" from="success_overlay/close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
